<resources>

    <string name="app_name">UnChilNote</string>
    <string name="Build.VERSION.CHECK">VERSION.SDK_INT >= R </string>

    <!-- Device Permission -->
    <string name="SnackBarTitle_GrantPermission">Setting</string>
    <string name="SnackBarDuration_GrantPermission">10000</string>
    <string name="SnackBarMessage_GrantPermission_DENIED">
        You need to grant permission in order to play this app</string>
    <string name="SnackBarMessage_GrantPermission_GRANTED">
         All Permissions to use this app have been approved</string>
    <string name="SnackBarMessage_Secret_On">
        It has been set as a secret note.
    </string>
    <string name="SnackBarMessage_Secret_Off">
        It has been set as a public note.
    </string>

    <string name="SnackBarMessage_Pin_On">
        Added location to entire map.
    </string>
    <string name="SnackBarMessage_Pin_Off">
        The location has been deleted from the entire map.
    </string>

    <string name="SnackBarMessage_Search_Set">
        Choose a label for Search
    </string>

    <string name="SnackBarMessage_Search_Ok">
        Now Seaching
    </string>

    <string name="BioMetric_Title">Secret Note</string>
    <string name="BioMetric_Subtitle">This is a secret note</string>
    <string name="BioMetric_NegativeButtonText">Use account password</string>
    <string name="BioMetric_Fail">Authentication failed!</string>
    <string name="SnackBarMessage_Label_Set">
        Choose a label for your note
    </string>

    <string name="SnackBarMessage_Label_Ok">
        The label has been set.
    </string>

    <string name="SnackBarMessage_Drawing_On">
        Draw a picture on the map.
    </string>
    <string name="SnackBarMessage_Drawing_Off">
        Drawing map has been snapshot processed.
    </string>

    <string name="SnackBarMessage_Record_On">
        Start recording.
    </string>
    <string name="SnackBarMessage_Record_Off">
        Recording is complete.
    </string>

    <string name="SnackBarMessage_Record_Convert">
        The recording file is being converted to text.
    </string>
    <!-- Device Permission -->


    <!-- BioMetric Result Message -->
    <string name="BIOMETRIC_SUCCESS">App can authenticate using biometrics</string>
    <string name="BIOMETRIC_ERROR_NO_HARDWARE">Biometric error no hardware</string>
    <string name="BIOMETRIC_ERROR_HW_UNAVAILABLE">Biometric error hardware unavailable</string>
    <string name="BIOMETRIC_ERROR_NONE_ENROLLED">Biometric error none enrolled</string>
    <string name="BIOMETRIC_ERROR_SECURITY_UPDATE_REQUIRED">Biometric error security update required</string>
    <string name="BIOMETRIC_ERROR_UNSUPPORTED">Biometric error unsupported</string>
    <string name="BIOMETRIC_STATUS_UNKNOWN">Biometric status unknown</string>
    <!-- BioMetric Result Message -->


    <!-- Content Description -->
    <string name="imgBtn_shutter_alt">Capture</string>
    <string name="imgBtn_lens_switch_alt">Switch Camera</string>
    <string name="imgBtn_gallery_alt">Gallery</string>
    <string name="imgBtn_flash_alt">Flash</string>
    <string name="imgBtn_replyAll_alt">Reply Photo</string>
    <string name="imgBtn_delete_alt">Delete</string>
    <string name="fAB_Write">Write</string>
    <!-- Content Description -->


    <!-- Component Text -->
    <string name="radioBtn_af_txt">AF</string>
    <string name="radioBtn_ae_txt">AE</string>
    <string name="radioBtn_awe_txt">AWB</string>
    <!-- Component Text -->


    <!-- Dialog Title Message -->
    <string name="Dialog_Delete_Title">Delete Item</string>
    <string name="Dialog_Select_Title_Label">Select Label</string>
    <string name="Dialog_Delete_Message">Are you sure you want to delete this item?</string>
    <!-- Dialog Title Message -->


    <!-- Menu Title -->
    <string name="menu_list_place">Place</string>
    <string name="menu_list_search">Search</string>

    <string name="menu_write_label">Label</string>
    <string name="menu_write_secret">Secret</string>
    <string name="menu_write_pin">Pin</string>
    <string name="menu_write_drawing">Draw</string>
    <string name="menu_write_record">Record</string>
    <string name="menu_write_photo">Photo</string>

    <string name="menu_record_play">Play</string>
    <string name="menu_record_conv">Convert</string>

    <string name="menu_map_layer_normal">Normal</string>
    <string name="menu_map_layer_hybrid">Hybrid</string>
    <string name="menu_map_layer_terrain">Terrain</string>


    <!-- Menu Title -->

    <string name="open_weather_url">"https://api.openweathermap.org/data/2.5/"</string>
    <string name="open_weather_apikey"></string>
    <string name="open_weather_units">metric</string>
    <string name="open_weather_lang">kr</string>
    <string name="open_weather_lat_test">37.38575</string>
    <string name="open_weather_lon_test">126.93407</string>
    <string name="open_weather_format_datetime">yyyy/MM/dd HH:mm E</string>
    <string name="open_weather_format_datetime2">yyyy/MM/dd HH:mm:ss E</string>
    <string name="open_weather_format_time">EEE,HH:mm:ss</string>
    <string name="open_weather_format_weather">Pressure: %,.0fhPa Humidity: %s</string>
    <string name="open_weather_format_temp">
        Temp: %,.0f°C Feels like: %,.0f°C Min: %,.0f°C Max: %,.0f°C</string>
    <string name="open_weather_format_wind">Wind_Speed: %,.0fm/s Deg: %,.0f° Visibility: %dkm</string>
    <string name="open_weather_format_sun">Sunrise: %s Sunset: %s</string>


    <!-- OpenWeatherApi -->
    <string name="txt_item_format_tags">Tags: Climbing, Tracking, Camping, Travel, Culture\.\.\.</string>
    <string name="txt_item_format_attacthment">Attach: Map(1) Voice(2) Photo(3)</string>
    <string name="txt_weather_format_time">2021/04/22 14:34 Thu Clouds Anyang-si/KR</string>
    <string name="txt_weather_format_weather">Pressure: 1,018hPa Humidity: 21.0%</string>
    <string name="txt_weather_format_temp">Temp: 27°C Feels: 26°C Min: 27°C Max: 28°C</string>
    <string name="txt_weather_format_wind">Wind_Speed: 2m/s Deg: 240° Visibility: 10km</string>
    <string name="txt_weather_format_sun">Sunrise: Thu,05:48:25 Sunset: Thu,19:12:50</string>
    <!-- OpenWeatherApi -->


    <!-- writeFragment -->
    <string name="writeTabMap">SNAPSHOT</string>
    <string name="writeTabRecord">RECORD</string>
    <string name="writeTabPhoto">PHOTO</string>
    <!-- writeFragment -->


    <string name="record_edit_text">What a Wonderful World !</string>

    <string name="playing_time">00:00/00:00</string>


</resources>
