<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_write_label"
        android:icon="@drawable/baseline_label_24"
        android:title="@string/menu_write_label"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_write_secret"
        android:icon="@drawable/baseline_lock_open_black_24"
        android:title="@string/menu_write_secret"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_write_pin"
        android:icon="@drawable/baseline_add_location_alt_24"
        android:title="@string/menu_write_pin"
        app:showAsAction="always"/>

    <item
        app:showAsAction="always"
        android:title="" />
    <item
        app:showAsAction="always"
        android:title="" />


    <item
        android:id="@+id/menu_write_drawing"
        android:icon="@drawable/baseline_draw_24"
        android:title="@string/menu_write_drawing"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_write_record"
        android:icon="@drawable/baseline_mic_none_24"
        android:title="@string/menu_write_record"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_write_photo"
        android:icon="@drawable/baseline_add_a_photo_24"
        android:title="@string/menu_write_photo"
        app:showAsAction="always" />

</menu>