<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/weather_ProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weather_TextView_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/txt_weather_format_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/weather_ImageView_icon"
        android:layout_width="@dimen/button_72"
        android:layout_height="@dimen/button_72"
        android:layout_marginStart="@dimen/margin_16"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_openweather_01d" />

    <TextView
        android:id="@+id/weather_TextView_sun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:gravity="start"
        android:text="@string/txt_weather_format_sun"
        app:layout_constraintBottom_toTopOf="@+id/weather_TextView_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weather_ImageView_icon"
        app:layout_constraintTop_toBottomOf="@+id/weather_TextView_headline" />



    <TextView
        android:id="@+id/weather_TextView_temp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:gravity="start"
        android:text="@string/txt_weather_format_temp"
        app:layout_constraintBottom_toTopOf="@+id/weather_TextView_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weather_ImageView_icon"
        app:layout_constraintTop_toBottomOf="@+id/weather_TextView_sun" />

    <TextView
        android:id="@+id/weather_TextView_weather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:gravity="start"
        android:text="@string/txt_weather_format_weather"
        app:layout_constraintBottom_toTopOf="@+id/detail_weather_TextView_wind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weather_ImageView_icon"
        app:layout_constraintTop_toBottomOf="@+id/weather_TextView_temp" />

    <TextView
        android:id="@+id/detail_weather_TextView_wind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:gravity="start"
        android:text="@string/txt_weather_format_wind"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weather_ImageView_icon"
        app:layout_constraintTop_toBottomOf="@+id/weather_TextView_weather" />


</androidx.constraintlayout.widget.ConstraintLayout>
